@@ -3,9 +3,9 @@
 # REQUIRED: ReferenceDir must already exist. It may be created by untaring a
 # previous distribution.
 #
-OldBuild=13
+OldBuild=14
 OldVersion=2.6.0.$OldBuild
-NewBuild=14
+NewBuild=15
 NewVersion=2.6.0.$NewBuild
 
 ChangesDir=mux
