@@ -3,9 +3,9 @@
 # REQUIRED: The two ReferenceDir must already exist. They may be created by
 # untaring a previous distribution.
 #
-OldBuild=13
+OldBuild=14
 OldVersion=2.6.0.$OldBuild
-NewBuild=14
+NewBuild=15
 NewVersion=2.6.0.$NewBuild
 
 ChangesDir=mux
